<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@mipmap/apping_dialog_bg"
            android:paddingLeft="5dp"
            android:paddingRight="5dp">

            <LinearLayout
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/cancle"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:text="@string/cancle"
                    android:textColor="@color/light23_blue" />
                <TextView
                    android:id="@+id/sure"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingTop="13dp"
                    android:paddingBottom="13dp"
                    android:text="@string/sure"
                    android:textColor="@color/light23_blue" />
            </LinearLayout>
            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/turndown_cause"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="15sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:layout_marginTop="13dp"
                android:textSize="10sp"
                android:textColor="@color/light1_gray"
                android:textColorHint="@color/light1_gray"
                android:gravity="left"
                android:padding="10dp"
                android:hint="@string/applyingreason_hit"
                android:background="@drawable/applingedit__shape"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="70dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

    <data>

    </data>
</layout>