<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/background"
        tools:context=".mvp.views.activitys.SubmitApplyActivity">

        <include
            android:id="@+id/headLayout"
            layout="@layout/head_layout"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"></include>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/complete"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/submitSuccessParent"
                android:orientation="horizontal"
                android:layout_marginTop="103dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@mipmap/selected"
                    android:layout_width="18dp"
                    android:layout_height="18dp"/>
                <TextView
                    android:layout_marginLeft="9dp"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:text="@string/submitsuccess"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/submitSuccessParent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/backIndex"
                    android:layout_marginLeft="9dp"
                    android:textSize="13sp"
                    android:background="@drawable/appling_btn__shape"
                    android:text="@string/backindex"
                    android:textColor="@color/light6_blue"
                    android:layout_marginRight="11dp"
                    android:layout_width="88dp"
                    android:layout_height="30dp"/>
                <Button
                    android:id="@+id/lookRecord"
                    android:layout_marginLeft="11dp"
                    android:textSize="13sp"
                    android:background="@drawable/appling_btn__shape"
                    android:text="@string/lookrecord"
                    android:textColor="@color/light6_blue"
                    android:layout_width="88dp"
                    android:layout_height="30dp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/contentView"
            android:visibility="visible"
            android:layout_marginTop="70dp"
            android:layout_width="match_parent"
            app:layout_constraintLeft_toLeftOf="@id/headLayout"
            app:layout_constraintRight_toRightOf="@id/headLayout"
            app:layout_constraintTop_toBottomOf="@+id/headLayout"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/shoppingList"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="10dp"
                    android:paddingLeft="13dp"
                    android:paddingRight="13dp"
                    android:layout_marginBottom="@dimen/main_bottomNavigtion_height"
                    android:background="@drawable/applying_shape"
                    android:layout_width="match_parent"
                    android:layout_height="205dp">
                    <RelativeLayout
                        android:id="@+id/applying"
                        app:layout_constraintTop_toTopOf="parent"
                        android:orientation="horizontal"
                        android:paddingTop="20dp"
                        android:paddingBottom="20dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_centerVertical="true"
                            android:textSize="13sp"
                            android:textColor="@color/light1_gray"
                            android:text="@string/applying"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:textSize="11sp"
                            android:layout_marginRight="14dp"
                            android:text="@string/switcher"
                            android:textColor="@color/light1_gray"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:drawableRight="@mipmap/rightarrow"
                            android:drawablePadding="6dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </RelativeLayout>
                    <View
                        android:id="@+id/line1"
                        app:layout_constraintTop_toBottomOf="@+id/applying"
                        android:layout_width="match_parent"
                        android:background="@color/light18_blue"
                        android:layout_height="0.5dp"/>
                    <TextView
                        android:id="@+id/applyingreason"
                        android:layout_marginTop="30dp"
                        android:textColor="@color/light1_gray"
                        app:layout_constraintTop_toBottomOf="@+id/line1"
                        android:text="@string/applyingreason"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <EditText
                        android:layout_marginTop="13dp"
                        android:textSize="10sp"
                        android:textColor="@color/light1_gray"
                        android:textColorHint="@color/light1_gray"
                        android:gravity="left"
                        android:padding="10dp"
                        android:hint="@string/applyingreason_hit"
                        android:background="@drawable/applingedit__shape"
                        app:layout_constraintTop_toBottomOf="@id/applyingreason"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:textColor="@color/white"
            android:text="@string/submitsure"
            android:layout_gravity="bottom"
            android:textSize="16dp"
            android:background="@drawable/submitapply_shape"
            app:layout_constraintBottom_toBottomOf="parent">


        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

    </data>
</layout>