<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light10_blue"
        tools:context=".mvp.views.activitys.LoginActivity">

        <com.boreas.plainlife.widget.CircleImageView
            android:id="@+id/logo"
            android:layout_width="90dp"
            android:layout_height="88dp"
            android:layout_marginTop="80dp"
            android:padding="5dp"
            android:src="@mipmap/logo2"
            app:border_color="@android:color/transparent"
            app:border_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:text="@string/login_title"
            android:textColor="@color/light1_white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="37dp"
            android:layout_marginRight="15dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="3dp"
            app:cardElevation="0dp"
            app:contentPaddingLeft="27dp"
            app:contentPaddingRight="27dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_title">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/userName_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_input_userName_hint"
                        android:textColorHint="@color/light3_gray">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="13"
                            android:textColorHint="@color/white"
                            android:textSize="16sp"
                            android:text="admin"
                            android:theme="@style/InputStyle" />
                    </com.google.android.material.textfield.TextInputLayout>

                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/light5_blue" />
                <RelativeLayout
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/userPsd_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_input_psd_hint"
                        android:textColorHint="@color/light3_gray">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userPsd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColorHint="@color/white"
                            android:textSize="16sp"
                            android:text="admin123"
                            android:theme="@style/InputStyle" />
                    </com.google.android.material.textfield.TextInputLayout>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/light5_blue" />
                <RelativeLayout
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ver_code_content"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/login_input_verificationcode_hint"
                        android:textColorHint="@color/light3_gray">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/verCode"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:maxLength="4"
                            android:textColorHint="@color/white"
                            android:textSize="16sp"
                            android:theme="@style/InputStyle" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <ImageView
                        android:id="@+id/verCodeImg"
                        android:layout_width="100dp"
                        android:layout_marginRight="5dp"
                        android:layout_alignParentRight="true"
                        android:layout_alignBottom="@+id/ver_code_content"
                        android:layout_marginBottom="8dp"
                        android:layout_height="30dp"/>
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:background="@color/light5_blue" />
                <RelativeLayout
                    android:layout_marginTop="17dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/regist"
                        android:textSize="13dp"
                        android:textColor="@color/light6_blue"
                        android:text="@string/login_regist"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/guset"
                        android:textSize="13dp"
                        android:textColor="@color/light6_blue"
                        android:text="@string/login_guset"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </RelativeLayout>
                <Button
                    android:id="@+id/login"
                    android:background="@drawable/login_btn_bg"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="13sp"
                    android:text="@string/login_text"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:visibility="gone"
            android:id="@+id/ipContent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <EditText
                android:id="@+id/inputIp"
                android:hint="请输入如下类似IP:127.0.0.1"
                android:textColorHint="@color/light2_gray"
                android:textColor="@color/white"
                android:layout_weight="8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/saveIp"
                android:text="保存"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:textColor="@color/white"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

    </data>
</layout>